@@ -852,6 +852,18 @@ class Repository(object):
                 (format, data_list, reader_func))
 
     @needs_read_lock
+    def search_missing_revision_ids(self, other, revision_id=None, find_ghosts=True):
+        """Return the revision ids that other has that this does not.
+        
+        These are returned in topological order.
+
+        revision_id: only return revision ids included by revision_id.
+        """
+        return InterRepository.get(other, self).search_missing_revision_ids(
+            revision_id, find_ghosts)
+
+    @deprecated_method(symbol_versioning.one_two)
+    @needs_read_lock
     def missing_revision_ids(self, other, revision_id=None, find_ghosts=True):
         """Return the revision ids that other has that this does not.
         
@@ -859,8 +871,14 @@ class Repository(object):
 
         revision_id: only return revision ids included by revision_id.
         """
-        return InterRepository.get(other, self).missing_revision_ids(
-            revision_id, find_ghosts)
+        keys =  self.search_missing_revision_ids(
+            other, revision_id, find_ghosts).get_keys()
+        other.lock_read()
+        try:
+            parents = other.get_graph().get_parent_map(keys)
+        finally:
+            other.unlock()
+        return tsort.topo_sort(parents)
 
     @staticmethod
     def open(base):
@@ -2337,12 +2355,13 @@ class InterRepository(InterObject):
             # we don't care about other ghosts as we can't fetch them and
             # haven't been asked to.
             next_revs = set(next_revs)
-            next_revs.difference_update(null_set)
-            have_revs = self.target.has_revisions(next_revs)
+            # we always have NULL_REVISION present.
+            have_revs = self.target.has_revisions(next_revs).union(null_set)
             missing_revs.update(next_revs - have_revs)
             searcher.stop_searching_any(have_revs)
-        return missing_revs
+        return searcher.get_result()
    
+    @deprecated_method(symbol_versioning.one_two)
     @needs_read_lock
     def missing_revision_ids(self, revision_id=None, find_ghosts=True):
         """Return the revision ids that source has that target does not.
@@ -2353,6 +2372,19 @@ class InterRepository(InterObject):
                             revision_id.
         :param find_ghosts: If True find missing revisions in deep history
             rather than just finding the surface difference.
+        """
+        return list(self.search_missing_revision_ids(
+            revision_id, find_ghosts).get_keys())
+
+    @needs_read_lock
+    def search_missing_revision_ids(self, revision_id=None, find_ghosts=True):
+        """Return the revision ids that source has that target does not.
+        
+        :param revision_id: only return revision ids included by this
+                            revision_id.
+        :param find_ghosts: If True find missing revisions in deep history
+            rather than just finding the surface difference.
+        :return: A bzrlib.graph.SearchResult.
         """
         # stop searching at found target revisions.
         if not find_ghosts and revision_id is not None:
@@ -2366,10 +2398,20 @@ class InterRepository(InterObject):
         else:
             source_ids = self.source.all_revision_ids()
         result_set = set(source_ids).difference(target_ids)
-        # this may look like a no-op: its not. It preserves the ordering
-        # other_ids had while only returning the members from other_ids
-        # that we've decided we need.
-        return [rev_id for rev_id in source_ids if rev_id in result_set]
+        return self._set_to_search_result(result_set, self.source)
+
+    def _set_to_search_result(self, result_set, repository):
+        """Convert a set of revision ids to a graph SearchResult."""
+        result_parents = set()
+        for parents in repository.get_graph().get_parent_map(
+            result_set).itervalues():
+            result_parents.update(parents)
+        included_keys = result_set.intersection(result_parents)
+        start_keys = result_set.difference(included_keys)
+        exclude_keys = result_parents.difference(result_set)
+        result = graph.SearchResult(start_keys, exclude_keys,
+            len(result_set), result_set)
+        return result
 
     @staticmethod
     def _same_model(source, target):
@@ -2516,7 +2558,7 @@ class InterWeaveRepo(InterSameDataRepository):
         return f.count_copied, f.failed_revisions
 
     @needs_read_lock
-    def missing_revision_ids(self, revision_id=None, find_ghosts=True):
+    def search_missing_revision_ids(self, revision_id=None, find_ghosts=True):
         """See InterRepository.missing_revision_ids()."""
         # we want all revisions to satisfy revision_id in source.
         # but we don't want to stat every file here and there.
@@ -2542,19 +2584,21 @@ class InterWeaveRepo(InterSameDataRepository):
         # we do not have a revision as that would be pointless.
         target_ids = set(self.target._all_possible_ids())
         possibly_present_revisions = target_ids.intersection(source_ids_set)
-        actually_present_revisions = set(self.target._eliminate_revisions_not_present(possibly_present_revisions))
+        actually_present_revisions = set(
+            self.target._eliminate_revisions_not_present(possibly_present_revisions))
         required_revisions = source_ids_set.difference(actually_present_revisions)
-        required_topo_revisions = [rev_id for rev_id in source_ids if rev_id in required_revisions]
         if revision_id is not None:
             # we used get_ancestry to determine source_ids then we are assured all
             # revisions referenced are present as they are installed in topological order.
             # and the tip revision was validated by get_ancestry.
-            return required_topo_revisions
+            result_set = required_revisions
         else:
             # if we just grabbed the possibly available ids, then 
             # we only have an estimate of whats available and need to validate
             # that against the revision records.
-            return self.source._eliminate_revisions_not_present(required_topo_revisions)
+            result_set = set(
+                self.source._eliminate_revisions_not_present(required_revisions))
+        return self._set_to_search_result(result_set, self.source)
 
 
 class InterKnitRepo(InterSameDataRepository):
@@ -2594,7 +2638,7 @@ class InterKnitRepo(InterSameDataRepository):
         return f.count_copied, f.failed_revisions
 
     @needs_read_lock
-    def missing_revision_ids(self, revision_id=None, find_ghosts=True):
+    def search_missing_revision_ids(self, revision_id=None, find_ghosts=True):
         """See InterRepository.missing_revision_ids()."""
         if revision_id is not None:
             source_ids = self.source.get_ancestry(revision_id)
@@ -2609,19 +2653,21 @@ class InterKnitRepo(InterSameDataRepository):
         # we do not have a revision as that would be pointless.
         target_ids = set(self.target.all_revision_ids())
         possibly_present_revisions = target_ids.intersection(source_ids_set)
-        actually_present_revisions = set(self.target._eliminate_revisions_not_present(possibly_present_revisions))
+        actually_present_revisions = set(
+            self.target._eliminate_revisions_not_present(possibly_present_revisions))
         required_revisions = source_ids_set.difference(actually_present_revisions)
-        required_topo_revisions = [rev_id for rev_id in source_ids if rev_id in required_revisions]
         if revision_id is not None:
             # we used get_ancestry to determine source_ids then we are assured all
             # revisions referenced are present as they are installed in topological order.
             # and the tip revision was validated by get_ancestry.
-            return required_topo_revisions
+            result_set = required_revisions
         else:
             # if we just grabbed the possibly available ids, then 
             # we only have an estimate of whats available and need to validate
             # that against the revision records.
-            return self.source._eliminate_revisions_not_present(required_topo_revisions)
+            result_set = set(
+                self.source._eliminate_revisions_not_present(required_revisions))
+        return self._set_to_search_result(result_set, self.source)
 
 
 class InterPackRepo(InterSameDataRepository):
@@ -2674,8 +2720,8 @@ class InterPackRepo(InterSameDataRepository):
             return (0, [])
         else:
             try:
-                revision_ids = self.missing_revision_ids(revision_id,
-                    find_ghosts=find_ghosts)
+                revision_ids = self.search_missing_revision_ids(revision_id,
+                    find_ghosts=find_ghosts).get_keys()
             except errors.NoSuchRevision:
                 raise errors.InstallFailed([revision_id])
         packs = self.source._pack_collection.all_packs()
@@ -2692,7 +2738,7 @@ class InterPackRepo(InterSameDataRepository):
             return (0, [])
 
     @needs_read_lock
-    def missing_revision_ids(self, revision_id=None, find_ghosts=True):
+    def search_missing_revision_ids(self, revision_id=None, find_ghosts=True):
         """See InterRepository.missing_revision_ids().
         
         :param find_ghosts: Find ghosts throughout the ancestry of
@@ -2711,7 +2757,8 @@ class InterPackRepo(InterSameDataRepository):
         # have in target, but don't try to check for existence where we know
         # we do not have a revision as that would be pointless.
         target_ids = set(self.target.all_revision_ids())
-        return [r for r in source_ids if (r not in target_ids)]
+        result_set = set(source_ids).difference(target_ids)
+        return self._set_to_search_result(result_set, self.source)
 
 
 class InterModel1and2(InterRepository):
@@ -2817,7 +2864,9 @@ class InterDifferingSerializer(InterKnitRepo):
     def fetch(self, revision_id=None, pb=None, find_ghosts=False):
         """See InterRepository.fetch()."""
         revision_ids = self.target.missing_revision_ids(self.source,
-            revision_id, find_ghosts=find_ghosts)
+            revision_id, find_ghosts=find_ghosts).get_keys()
+        revision_ids = tsort.topo_sort(
+            self.get_graph().get_parent_map(revision_ids))
         def revisions_iterator():
             for current_revision_id in revision_ids:
                 revision = self.source.get_revision(current_revision_id)
